# amfn-batch

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  RELEASES.md  test_batch_basic.json  test_batch_multiple.json  test_batch_serialization.json  test_batch_single.json  test_batch_template.json  test_batch_variable.json
src/: batch.rs  batch_constants.rs  batch_enums.rs  batch_traits.rs  lib.rs  main.rs
src/batch/: adapter_factory.rs  adapter_file.rs  batch_utility.rs  elem_batch.rs  elem_batch_action.rs  elem_batch_io.rs  elem_batch_result.rs  json_deserialize.rs  list_batch.rs
tests/: batch_basic.rs  batch_multiple.rs  batch_serialization.rs  batch_single.rs  batch_template.rs  batch_variable.rs
testsets/: test_batch_basic.json  test_batch_multiple.json  test_batch_serialization.json  test_batch_single.json  test_batch_template.json  test_batch_variable.json
testsets/basic_loan/inputs/: cashflows.json
testsets/bi-weekly_loan/inputs/: cashflows.json
testsets/combine/inputs/: cashflows.json
testsets/inputs/: exchange_rates.json  locales.json  preferences.json  templates.json
testsets/inputs/en-US/: locales.json
testsets/merge/inputs/: cashflows.json
testsets/neg_to_pos/inputs/: cashflows.json
testsets/pos_to_neg/inputs/: cashflows.json
testsets/split/inputs/: cashflows.json
testsets/standard_annuity/inputs/: cashflows.json
testsets/standard_bond/inputs/: cashflows.json
testsets/standard_cashflow/inputs/: cashflows.json
testsets/standard_investment/inputs/: cashflows.json
testsets/standard_loan/inputs/: cashflows.json
