[package]
name = "amfnbatch"
version = "0.3.2"
authors = ["ShiftLeft Software"]
description = "Amortization Functions (AmFn) Batch Process"
homepage = "https://shiftleftsoftware.com"
documentation = "https://docs.rs/amfnbatch"
repository = "https://github.com/ShiftLeftSoftware/amfn-batch"
keywords = ["amortization", "calculator"]
categories = ["mathematics"]
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2018"

[lib]
name = "amfnbatchlib"
path = "src/lib.rs"

[[bin]]
name = "amfnbatch"
path = "src/main.rs"

[dependencies]
clap = "~2.33"
rust_decimal = "~1.10"
json = "~0.12"
colored = "~2.0"
amfnengine = { path = "../amfn-engine", version = "~0.3" }

[profile.release]
lto = true